sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:7: error: not found: value a
  a = 0
  ^AlgCocktailSort1:12: error: not found: value a
      a = 1
      ^AlgCocktailSort1:20: error: not found: value a
      a = 1
      ^